fix vertical spacing for index

--- a/assets/css/old-index.css
+++ b/assets/css/old-index.css
@@ -23,22 +23,22 @@ body {
     font-size: 1.25em;
 }
 
-/* page layout */
-
-nav {
+/* nav {
     display: grid;
     grid-template-areas:
     'nleft logo nright';
-}
+} */
 
-.index-layout {
+/* grid layout test */
+.body {
     display: grid;
-    row-gap: 20px;
+    row-gap: 150px;
     grid-template-areas:
-    'hero'
-    'call-to-action'
-    'contact'
-    'footer';
+    'nleft logo nright'
+    'hero hero hero'
+    'call call call'
+    'contact contact contact'
+    'footer footer footer';
 }
 
 .logo {
@@ -66,7 +66,7 @@ grid-area: logo;
 }
 
 .call-to-action {
-    grid-area: call-to-action;
+    grid-area: call;
 }
 
 .contact {
@@ -77,7 +77,14 @@ grid-area: logo;
     grid-area: footer;
 }
 
+
 /* header and logo  */
+
+header {
+    width: 100%;
+    background-color: black;
+    display: block;
+}
 
 #logo-container {
     margin: 0 auto;
@@ -116,6 +123,11 @@ nav {
     width: 100%;
     height: 100px;
     background-color: #070505;
+}
+
+.navigation div {
+    width: 100%;
+    text-align: center;
 }
 
 .nleft a {
@@ -187,21 +199,24 @@ nav {
     background-position: right;
 }
 
+#navigation a:hover+#nav-hover-home {
+    color: #db0a0b;
+}
+
 .ink-partition {
     width: 100%;
     height: 200px;
     background: url(../images/index/ink-partition-4.png) no-repeat center;
     background-size: cover;
     position: absolute;
+    z-index: 1;
+}
+
+#ink-partition-nav {
+    top: 0;
 }
 
 /* hero section */
-
-#ip-hero-top {
-    bottom: 90%;
-    z-index: 2;
-}
-
 
 #hero-container {
     width: 100%;
@@ -224,7 +239,7 @@ nav {
      z-index: 0;
   }
 
-  #ip-hero-bottom {
+  #ink-partition-hero {
     position: absolute;
     top: 95%;
     z-index: 2;
@@ -306,11 +321,13 @@ nav {
 }
 
 /* call to action secton */
+#call-to-action-container {
+    margin-top: 520px;
+}
 
 #call-to-actions {
     width: 90%;
-    padding-top: 20px;
-    margin: 0 auto;
+    margin: 5% auto;
 }
 
 #call-to-actions > h2 {
@@ -321,16 +338,16 @@ nav {
 /* contact form */
 
 #contact-container {
-    overflow: hidden;
     width: 100%;
     height: 650px;
     margin: 0 auto;
     position: relative;
+    top: 50px;
 }
 
-#ip-contact-top {
-    bottom: 90%;
-    z-index: 2;
+#ink-partition-contact {
+    top: -100px;
+    z-index: 3;
 }
 
 #contact-bg {
@@ -338,9 +355,7 @@ nav {
     background-size: cover;
     width: 100%;
     height: 700px;
-    border-top: 10px solid #000000;
-    border-bottom: 15px solid #000000;
-
+    overflow: hidden;
 }
 
 #form-box {
@@ -397,8 +412,6 @@ label {
     border: 1px solid #f8f8f7;
     padding: 5px;
     border-radius: 2px;
-    position: relative;
-    z-index: 3;
 }
 
 .submit-contact:hover {
@@ -406,19 +419,17 @@ label {
     color: #070505;
 }
 
-#ip-contact-bottom {
-    top: 90%;
-    z-index: 2;
-}
 
 /* footer */
 
 #social-footer {
+    margin-top: 5%;
     width: 100%;
     height: 200px;
     background-color: #000000;
     color:#f8f8f7;
     position: relative;
+    top: 100px;
 }
 
 #ink-partition-footer {
@@ -430,6 +441,7 @@ label {
     margin: 0 auto;
     text-align: center;
     width: 90%;
+    padding-top: 30px;
 }
 
 #social h2 {
@@ -502,15 +514,116 @@ label {
     margin-right: 5px;
 }
 
-/* Media queries */
-@media screen and (max-width: 750px){
-    nav {
-        display: grid;
-        grid-template-areas:
-        'logo'
-        'nleft'
-        'nright';
-        padding-bottom: 275px;
-        background-color: #000000;
+
+/* desktop/laptop/big screen devices */
+@media screen and (min-width: 950px){
+    /* about section */
+    #about-container {
+        background-color: rgba(0, 0, 0, 0);
     }
+    
+    #ink-partition-about-top {
+        display: none;
+    }
+    
+    #ink-partition-about-bottom {
+        display: none;
+    }
+    
+    #about-image-container {
+        width: 50%;
+        height: 500px;
+        margin: 0;
+        float: right;
+        top: 20%;
+    }
+
+    #about-image-shade {
+       visibility: hidden;
+    }
+
+    #about-image {
+        background-size: contain;
+        top: 0;
+        height: 100%;
+    }
+    
+    #about-text {
+        width: 50%;
+        font-size: 1em;
+        Margin: 0;
+    }
+
+    /* call to action section */
+
+    #call-to-action-container {
+        margin-top: 220px;
+    }
+
+    #call-to-actions {
+        width: 50%;
+        margin: 5% auto;
+    }
+
+    /* contact form section */
+    #ink-partition-contact {
+        visibility: hidden;
+    }
+
+    #contact-container {
+        top: 0px;
+    }
+
+    #contact-bg {
+        margin: 0 auto;
+        max-width: 80%;
+
+    }
+    .contact-form {
+        max-width: 450px;
+        padding-left: 25px;
+    }
+    
+    #form-box {
+        top: 47.5px;
+        max-width: 500px;
+        max-height: 600px;
+        left: 10%;
+    }
+}
+
+
+/* screens less than 415px width */
+@media screen and (max-width: 415px){ 
+.navigation {
+    width: 100%;
+    margin: 0 auto;
+}
+
+#navigation-1 {
+    float: none;
+}
+
+#navigation-2 {
+    float: none;
+    position: relative;
+    bottom: 5px;
+}
+
+#ink-partition {
+    top: 275px;
+}
+}
+
+/* media queries for portrait orientation screens */
+
+/* galaxy fold */
+@media screen and (min-height: 653px) and (max-width: 280px){ 
+    body {
+        font-size: 1.1em;
+    }
+    /* footer adjustment */
+    #social-footer {
+        top: 120px;
+}
 }
